[ADD] getProductId (fake data)
