# src/api/v1/routes/index.js
@@ -1,3 +1,4 @@
 module.exports = async function(fastify) {
   require("./review")(fastify);
+  require("./product")(fastify);
 };
